// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp.js /> Debe de mostrar el componente <GifExpertApp /> correctamente 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <h2
      className="animate__animated animate__rotateInDownLeft"
    >
      GifExpertApp
    </h2>
    <p>
      By Marcos Gomez
    </p>
  </div>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;

exports[`Pruebas en <GifExpertApp.js /> Debe de mostrar una lista de categorias 1`] = `
<div
  className="container"
>
  <div
    className="header"
  >
    <h2
      className="animate__animated animate__rotateInDownLeft"
    >
      GifExpertApp
    </h2>
    <p>
      By Marcos Gomez
    </p>
  </div>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="los simpons"
      key="los simpons"
    />
    <GifGrid
      category="dragon ball"
      key="dragon ball"
    />
  </ol>
</div>
`;
